--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,4 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600;700;800&family=Bai+Jamjuree:wght@400;700&display=swap');
 
 /* body {
   background-color: rgb(0, 0, 56);
